# survey

./: .dockerignore  .gitignore  Dockerfile  TODO.md  docker-compose.yaml  fly.toml  readme.md
.github/workflows/: fly.yml
api_interfaces/: Cargo.toml
api_interfaces/src/routes/: contact.rs
backend/: Cargo.toml  playground.http
backend/src/: main.rs
backend/src/routes/: contact.rs
backend/src/services/: cf_site_verify.rs  email.rs  mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: lib.rs  main.rs
frontend/src/components/: email-form.component.rs  header.component.rs  mod.rs
frontend/src/layouts/: home.layout.rs  mod.rs
frontend/src/views/: about-us.view.rs  contact.view.rs  home.view.rs  mod.rs  not-found.view.rs  survey.view.rs
frontend/static/: custom_rules.css
