[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_interfaces = { version="0.1", path = "../api_interfaces" }
dotenv = "0.15.0"
axum = { version = "*"}
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["full"] }
lettre = { version = "0.10", features = ["rustls-tls"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
reqwest = { version = "0.11", features = ["blocking","json","default-tls","rustls-tls"] }
tracing-subscriber = { version = "0.3", features = ["default","env-filter"]}
tracing = "0.1.37"
