[package]
name = "frontend-leptos"
version = "0.1.0"
edition = "2021"

[package.metadata.commands]
build-release-css = "NODE_ENV=production tailwindcss -c ./tailwind.config.js -o ./static/tailwind.css --minify"
build-css = "NODE_ENV=production tailwindcss -c ./tailwind.config.js -o ./static/tailwind.css"

prebuild-dev = "cargo cmd build-css"
build-dev = "trunk build"

preserve = "cargo cmd build-css"
serve = "trunk serve"

[dependencies]
api_interfaces = { version="0.1", path = "../api_interfaces" }
leptos = { version = "0.2", features = ["stable"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
js-sys = "0.3.61"
web-sys = {version = "0.3", features = ["HtmlInputElement","HtmlFormElement","FormData"]}
serde_json = "1"
serde = { version = "1", features = ["derive"]}
reqwasm = {version = "0.5", features = ['json']}
gloo-net = {version = "0.2"}
anyhow = "1"
dotenv = "0.15.0"

