[package]
name = "frontend-leptos"
version = "0.1.0"
edition = "2021"

[package.metadata.commands]
build-release-css = "NODE_ENV=production tailwindcss -c ./tailwind.config.js -o ./static/tailwind.css --minify"
build-css = "NODE_ENV=production tailwindcss -c ./tailwind.config.js -o ./static/tailwind.css"

prebuild-dev = "cargo cmd build-css"
build-dev = "trunk build"

preserve = "cargo cmd build-css"
serve = "trunk serve"

[dependencies]
leptos = { version = "0.2.5", features = ["csr"] }
leptos_router = { version = "0.2.5", features = ["csr"]}
leptos_meta = {version = "0.2.5", features = ["csr"]}
leptos_dom = { version = "0.2.5"}
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
tracing ={ version = "0.1" }

[toolchain]
channel = "nightly"
targets = ["wasm32-unknown-unknown"]
